2004-09-27  Jerry James  <james@xemacs.org>

	* sysdep.c: Mark more unused parameters with the UNUSED macro.

2004-09-21  Jerry James  <james@xemacs.org>

	* ExternalClient.c: Include compiler.h.
	* ExternalShell.c: Ditto.

2004-09-19  Stephen J. Turnbull  <stephen@xemacs.org>

	* file-coding.c: Improve explanatory comments, add diatribes.
	Fix some typos in comments.

2003-11-21  Stephen J. Turnbull  <stephen@xemacs.org>
 
	* dired.c (Fdirectory_files): MATCH is only tried against basename.

2003-11-02  Stephen J. Turnbull  <stephen@xemacs.org>

	* eval.c (Fcatch, Fthrow): Document that tags are compared with `eq'.

2003-10-31  Stephen J. Turnbull  <stephen@xemacs.org>

	* procimpl.h (struct Lisp_Process):
	* undo.c (Fprimitive_undo): 
	Remove obsolete references to ENERGIZE in comments.

2004-07-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* glyphs.c (Fimage_instance_type): Add 'widget to docstring.

2004-07-12  Stephen J. Turnbull  <stephen@xemacs.org>

	* glyphs-widget.c (tab_control_query_geometry):
	(logical_unit_height):
	Typos in comments.

2004-06-29  Stephen J. Turnbull  <stephen@xemacs.org>

	* syntax.c (Sextword): Doesn't seem to exist.  Move comment to
	Internals manual.

2004-09-21  Jerry James  <james@xemacs.org>

	* sound.c (Fwait_for_sounds): Factor out test for unused parameter.
	(Fconnected_to_nas_p): Ditto.

2004-05-14  Darryl Okahata  <darrylo@xemacs.org>

	* window.c (current-pixel-row, current-pixel-column).  Added a
	new function, ``current-pixel-row'', that returns the pixel row
	of point.  current-pixel-column was modified to share code with
	current-pixel-row''.

2004-09-14  Jerry James  <james@xemacs.org>

	* compiler.h: Change old UNUSED_ARG into UNUSED_ARG and
	ATTRIBUTE_UNUSED.  Create a new UNUSED macro that works in the
	common case.  Define conservatively for the Intel compiler.
	* dialog-x.c (dbox_descriptor_to_widget_value): Comment out
	declaration and assignment of unused variable title.